# MiniTorch

./: .env  .gitignore  LICENSE  README.md  Tensor.py  __init__.py  functions.py  requirements.txt  tensor.py
examples/: RNN.py  benchmark.py  xor_classification.py
rust/: .gitignore  Cargo.toml  pyproject.toml  roadmap.md  test_tensor.py
rust/src/: autograd.rs  cpu.rs  lib.rs  main.rs  tensor.rs  util.rs
rust/tests/: __init__.py  test_all_operations.py  test_autograd.py  test_operations.py  test_sum.py  test_tensor_basics.py
src/: activations.py  base.py  functions.py  losses.py  operations.py  optimizers.py  tensor.py
src/examples/: sequential.py  test.py  xor_classification.py
src/nn/: __init__.py  activations.py  functional.py  layers.py  linear.py  losses.py  module.py  optimizers.py  regularizations.py
src/ops/: __init__.py  autograd.py  cpu.py  cuda.py  dispatch.py  functions.py  meta.py
src/utils/: data.py
tests/: test_activations.py  test_cuda.py  test_functions.py  test_loss.py  test_operations.py  test_optimizers.py  test_util.py
