[package]
name = "rs_torch"
version = "0.1.0"
edition = "2021"

[lib]
# "cdylib" es necesario para que Rust genere una biblioteca dinámica compatible con Python
name = "rs_torch"
crate-type = ["cdylib"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
# extension-module: Indica a PyO3 que no debe enlazar contra libpython (necesario para wheels)
pyo3 = { version = "0.27.2", features = ["extension-module"] }
# Integración nativa con arreglos de NumPy
numpy = "0.27.1"
# Equivalente a NumPy en Rust para cálculos matriciales
ndarray = { version = "0.17.2"}
paste = "1.0"

[profile.release]
# Optimizaciones agresivas para rendimiento de producción
# opt-level = 3
# Link Time Optimization: Optimiza a través de crates (mejora velocidad, aumenta tiempo de compilación)
# lto = true
# Reduce el tamaño del binario y puede mejorar la velocidad al no rastrear stack traces de pánico
# panic = "abort"
# Reduce el número de unidades de generación de código para mejorar la optimización global
# codegen-units = 1